--- a/Seccion_2/Ejemplo_2_WineQT_classification.ipynb
+++ b/Seccion_2/Ejemplo_2_WineQT_classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://tinyurl.com/yns4g4sq)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://tinyurl.com/2bf9gfaw)"
    ]
   },
   {
