--- a/Seccion_2/Ejemplo_3_mall_customers_clustering.ipynb
+++ b/Seccion_2/Ejemplo_3_mall_customers_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://tinyurl.com/yvsx48py)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://tinyurl.com/23p8tbp7)"
    ]
   },
   {
@@ -1063,6 +1063,25 @@
    ],
    "source": [
     "X_data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Realizando una predicción"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = {'Age':22, 'Annual Income (k$)':60, 'Spending Score (1-100)':50}\n",
+    "X_test = pd.DataFrame(X_test, index=[0])\n",
+    "result_cluster = kmeans.predict(X_test)\n",
+    "print(f'El cliente pertenece al cluster {result_cluster[0]}')"
    ]
   },
   {
@@ -3328,19 +3347,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 5))\n",
+    "def get_dbscan_centroids(X_data, dbscan_labels):\n",
+    "    centroids = []\n",
+    "    unique_labels = np.unique(dbscan_labels)\n",
+    "    for label in unique_labels:\n",
+    "        if label != -1: # Exclude noise points (-1)\n",
+    "            cluster_points = X_data[dbscan_labels == label]\n",
+    "            centroid = np.mean(cluster_points, axis=0)\n",
+    "            centroids.append(centroid)\n",
+    "    return centroids\n",
+    "\n",
+    "centroids = get_dbscan_centroids(X_data, dbscan_labels)\n",
+    "\n",
+    "# Convert centroids to a NumPy array for easier indexing\n",
+    "centroids = np.array(centroids)\n",
+    "\n",
+    "plt.figure(figsize=(14, 5))\n",
     "\n",
     "# Gráfico de Age vs Spending Score\n",
     "plt.subplot(1, 2, 1)\n",
     "sns.scatterplot(x='Age', y='Spending Score (1-100)', hue='Cluster', data=DBSCAN_Clust, palette='viridis')\n",
-    "plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], s=100, c='red')\n",
+    "# Plot centroids\n",
+    "if centroids.size > 0:  # Check if there are any centroids to plot\n",
+    "    plt.scatter(centroids[:, 0], centroids[:, 2], s=100, c='red', label='Centroids')\n",
     "plt.title('Age vs Spending Score (1-100)')\n",
+    "plt.legend()  # Show legend for centroids\n",
     "\n",
     "# Gráfico de Annual Income vs Spending Score\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.scatterplot(x='Annual Income (k$)', y='Spending Score (1-100)', hue='Cluster', data=DBSCAN_Clust, palette='viridis')\n",
-    "plt.scatter(kmeans.cluster_centers_[:, 1], kmeans.cluster_centers_[:, 2], s=100, c='red')\n",
+    "# Plot centroids\n",
+    "if centroids.size > 0:  # Check if there are any centroids to plot\n",
+    "    plt.scatter(centroids[:, 1], centroids[:, 2], s=100, c='red', label='Centroids')\n",
     "plt.title('Annual Income (k$) vs Spending Score')\n",
+    "plt.legend()  # Show legend for centroids\n",
     "\n",
     "plt.show()"
    ]
